# ecstl

./: CMakeLists.txt  README.md
src/ecstl/: any_ref.hpp  component.hpp  ecstl.hpp  entity.hpp  hasher.hpp  indexed_flat_map.hpp  open_hash_map.hpp  optional_ref.hpp  paired_iterator.hpp  registry.hpp  registry_shrptr.hpp  signals.hpp  signals_async.hpp  sparse_map.hpp  view.hpp  view2.hpp
src/ecstl/polyfill/: hasher.hpp  unique_ptr.hpp
src/ecstl/utils/: any_ref.hpp  class_ident.hpp  for_each_tuple.hpp  indexed_flat_map.hpp  open_hash_map.hpp  optional_ref.hpp  paired_iterator.hpp  ref.hpp  sequence.hpp  type_name.hpp
src/libecs/: CMakeLists.txt  binary_component.hpp  c_teleport.hpp  ecs.cpp  ecs.h
src/tests/: CMakeLists.txt  compile_test.cpp  constexpr_tests.cpp  deleter_test.c  hello_world.c  hello_world.cpp  signals.cpp  view.c
